@@ -4,8 +4,8 @@ import com.researchspace.model.User;
 import com.researchspace.service.EmailBroadcast;
 import com.researchspace.service.EmailContent;
 import com.researchspace.service.impl.EmailContentGenerator;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import javax.servlet.http.HttpServletRequest;
 import org.slf4j.Logger;
@@ -51,10 +51,8 @@ public class NotifyUserPostUserCreate implements IPostUserCreationSetUp {
       rc.put("groupName", newUser.getGroups().iterator().next().getDisplayName());
     }
     EmailContent message =
-        emailContentGenerator.generatePlainTextAndHtmlContent(
-            "email.welcome.subject", null, emailTemplateResource, rc);
+        emailContentGenerator.render("email.welcome.subject", emailTemplateResource, rc);
     log.info("Sending mail to {} at {}", newUser.getUsername(), newUser.getEmail());
-    emailSender.sendHtmlEmail(
-        message.subject(), message, Arrays.asList(new String[] {newUser.getEmail()}), null);
+    emailSender.sendEmail(message, List.of(newUser.getEmail()), null);
   }
 }
