@@ -1,11 +1,21 @@
 package com.researchspace.service.impl;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import com.researchspace.model.comms.MessageOrRequest;
 import com.researchspace.service.EmailContent;
-import java.util.Collections;
+import io.github.resilience4j.ratelimiter.RateLimiter;
+import io.github.resilience4j.ratelimiter.RateLimiterConfig;
+import io.github.resilience4j.ratelimiter.RequestNotPermitted;
+import io.github.resilience4j.retry.RetryConfig;
+import java.time.Duration;
+import java.util.List;
+import java.util.stream.IntStream;
 import javax.mail.AuthenticationFailedException;
 import javax.mail.MessagingException;
 import javax.mail.SendFailedException;
@@ -31,8 +41,7 @@ public class EmailSenderTest {
     emailSender.setErrorLog(logger);
     emailSender.setRetryDelayMillis(RETRY_MILLIS);
     emailSender.init();
-    emailSender.sendHtmlEmail(
-        "any", anyHtmlBody(), Collections.emptyList(), new MessageOrRequest());
+    emailSender.sendEmail(anyHtmlBody(), List.of("user@example.com"), new MessageOrRequest());
 
     verify(logger, times(3)).warn(Mockito.anyString(), new Object[] {Mockito.any()});
   }
@@ -44,18 +53,64 @@ public class EmailSenderTest {
     emailSender.setErrorLog(logger);
     emailSender.setRetryDelayMillis(RETRY_MILLIS);
     emailSender.init();
-    emailSender.sendHtmlEmail(
-        "any", anyHtmlBody(), Collections.emptyList(), new MessageOrRequest());
+    emailSender.sendEmail(anyHtmlBody(), List.of("user@example.com"), new MessageOrRequest());
     // log error once, no retries
     Mockito.verify(logger, Mockito.times(1))
         .error(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
+  }
+
+  @Test
+  public void batchesRecipientsByAddressLimit() {
+    CountingSenderStub sender = countingSender();
+
+    sender.sendEmail(anyHtmlBody(), addresses(7), null);
+    assertEquals(3, sender.messageCount);
+
+    sender.messageCount = 0;
+    sender.sendEmail(anyHtmlBody(), addresses(3), null);
+    assertEquals(1, sender.messageCount);
+
+    sender.messageCount = 0;
+    sender.sendEmail(anyHtmlBody(), List.of(), null);
+    assertEquals(0, sender.messageCount);
+  }
+
+  @Test
+  public void rateLimiterRejectsExcessBatches() {
+    CountingSenderStub sender = countingSenderWithRateLimit(Duration.ofMillis(1));
+
+    assertThrows(
+        RequestNotPermitted.class, () -> sender.sendEmail(anyHtmlBody(), addresses(7), null));
+  }
+
+  @Test
+  public void rateLimiterWaitsForCapacity() {
+    CountingSenderStub sender = countingSenderWithRateLimit(Duration.ofSeconds(1));
+
+    sender.sendEmail(anyHtmlBody(), addresses(7), null);
+
+    assertEquals(3, sender.messageCount);
+  }
+
+  @Test
+  public void authenticationFailuresAreNotRetried() {
+    RetryConfig config = new EmailBroadcastImpl().buildRetryConfig();
+
+    assertFalse(config.getExceptionPredicate().test(new AuthenticationFailedException()));
+    assertTrue(config.getExceptionPredicate().test(new MessagingException()));
+  }
+
+  @Test
+  public void rejectsInvalidDeliveryLimits() {
+    assertThrows(IllegalArgumentException.class, () -> new EmailBroadcastImpl(0, 25));
+    assertThrows(IllegalArgumentException.class, () -> new EmailBroadcastImpl(5, 0));
   }
 
   static class FailingSenderStub extends EmailBroadcastImpl {
     private final MessagingException failure;
 
     FailingSenderStub(MessagingException failure) {
-      super(new EmailContentGenerator(), "http://localhost:8080");
+      super();
       this.failure = failure;
     }
 
@@ -65,7 +120,40 @@ public class EmailSenderTest {
     }
   }
 
+  static class CountingSenderStub extends EmailBroadcastImpl {
+    int messageCount;
+
+    @Override
+    protected void sendMailToAddresses(EmailConfig config) {
+      messageCount++;
+    }
+  }
+
+  private CountingSenderStub countingSender() {
+    CountingSenderStub sender = new CountingSenderStub();
+    sender.init();
+    sender.setAddressChunkSize(3);
+    return sender;
+  }
+
+  private CountingSenderStub countingSenderWithRateLimit(Duration timeout) {
+    CountingSenderStub sender = countingSender();
+    sender.setRateLimiter(
+        RateLimiter.of(
+            "emailLimiter",
+            RateLimiterConfig.custom()
+                .limitForPeriod(2)
+                .limitRefreshPeriod(Duration.ofMillis(100))
+                .timeoutDuration(timeout)
+                .build()));
+    return sender;
+  }
+
+  private List<String> addresses(int count) {
+    return IntStream.range(0, count).mapToObj(i -> "user" + i + "@example.com").toList();
+  }
+
   private EmailContent anyHtmlBody() {
-    return new EmailContent(null, "<html><body>body</body></html>", "body");
+    return new EmailContent("subject", "<html><body>body</body></html>", "body");
   }
 }
